// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer test decrement 1`] = `
Object {
  "count": -1,
  "name": "",
}
`;

exports[`reducer test increment 1`] = `
Object {
  "count": 1,
  "name": "",
}
`;
